# DSpark-OPD

./: .gitignore  BLOG.zh-CN.md  README.md  pyproject.toml
configs/: dspark_opd_qwen3_4b.yaml
docs/: research_notes.zh-CN.md  sources.md
examples/: toy_dspark_opd.py
scripts/: dspark_opd_dry_run.py
src/dspark_opd/: __init__.py  calibration.py  config.py  deepspec_adapter.py  losses.py  np_utils.py  replay.py  scheduler.py  torch_losses.py
tests/: test_calibration_replay.py  test_losses.py  test_scheduler.py
